# interactive-track-and-trace

./: LICENSE  README.md
advection/: README.md
advection/src/: AdvectionKernel.h  CMakeLists.txt  EulerAdvectionKernel.cpp  EulerAdvectionKernel.h  RK4AdvectionKernel.cpp  RK4AdvectionKernel.h  UVGrid.cpp  UVGrid.h  Vel.h  interpolate.cpp  interpolate.h  main.cpp  readdata.cpp  readdata.h
linear-interpolation/: .gitignore
linear-interpolation/src/: CMakeLists.txt  UVGrid.cpp  UVGrid.h  Vel.cpp  interpolate.cpp  interpolate.h  main.cpp  point.cpp  point.h  readdata.cpp  readdata.h  to_vector.h  vecutils.cpp  vecutils.h
opening-hdf5/: .gitignore  README.md
opening-hdf5/src/: CMakeLists.txt  main.cpp
particle-track-and-trace/: .gitignore  README.md
particle-track-and-trace/src/: CMakeLists.txt  CartographicTransformation.cpp  CartographicTransformation.h  Program.cpp  Program.h  flake.nix  main.cpp
particle-track-and-trace/src/advection/: AdvectionKernel.h  EulerAdvectionKernel.h  RK4AdvectionKernel.h  UVGrid.cpp  UVGrid.h  Vel.h  interpolate.cpp  interpolate.h  readdata.cpp  readdata.h
particle-track-and-trace/src/advection/kernel/: AdvectionKernel.h  EulerAdvectionKernel.cpp  EulerAdvectionKernel.h  RK4AdvectionKernel.cpp  RK4AdvectionKernel.h  SnapBoundaryConditionKernel.cpp  SnapBoundaryConditionKernel.h
particle-track-and-trace/src/badges/: Achievement.h  Badge.cpp  Badge.h  EveryoneMakesMistakes.cpp  EveryoneMakesMistakes.h  FileBadgeFactory.cpp  FileBadgeFactory.h  FirstSteps.cpp  FirstSteps.h  MedianIsKing.cpp  MedianIsKing.h  NorthernFulmar.cpp  NorthernFulmar.h  SimpleAchievement.cpp  SimpleAchievement.h  StaticBadge.cpp  StaticBadge.h  Statistic.cpp  TrackedAchievement.cpp  TrackedAchievement.h
particle-track-and-trace/src/collisions/: DebrisPickup.cpp  DebrisPickup.h  DummyCollisionHandler.cpp  DummyCollisionHandler.h  FoodPickup.cpp  FoodPickup.h  ParticleCollisionCallback.h  ParticleRemover.cpp  ParticleRemover.h  SoundEffect.cpp  SoundEffect.h  TrackedCollision.cpp  TrackedCollision.h
particle-track-and-trace/src/commands/: CameraMoveCallback.cpp  CameraMoveCallback.h  CharacterMouseMoveCallback.cpp  CharacterMouseMoveCallback.h  CharacterMoveCallback.cpp  CharacterMoveCallback.h  DismissGameoverScreen.cpp  DismissGameoverScreen.h  DisplayEulerCommand.cpp  DisplayEulerCommand.h  DisplaySplashScreenCommand.cpp  DisplaySplashScreenCommand.h  SpawnPointCallback.cpp  SpawnPointCallback.h  TimerCallbackCommand.cpp  TimerCallbackCommand.h  UserStudyTimer.cpp  UserStudyTimer.h
particle-track-and-trace/src/gameovers/: GameoverCallback.h  ResetTimeAndPause.cpp  ResetTimeAndPause.h
particle-track-and-trace/src/layers/: BackgroundImage.cpp  BackgroundImage.h  BadgeCounter.cpp  BadgeCounter.h  Badges.cpp  Badges.h  Camera.cpp  Camera.h  Character.cpp  Character.h  CharacterNoStop.cpp  CharacterNoStop.h  DayCounter.cpp  DayCounter.h  EGlyphLayer.cpp  EGlyphLayer.h  EulerGlyphs.cpp  EulerGlyphs.h  FoodSpawner.cpp  FoodSpawner.h  GameOverScreen.cpp  GameOverScreen.h  Health.cpp  Health.h  LGlyphLayer.cpp  LGlyphLayer.h  LagrangeGlyphs.cpp  LagrangeGlyphs.h  Layer.cpp  Layer.h  ParticleCollision.cpp  ParticleCollision.h  SplashScreen.cpp  SplashScreen.h  StatisticsManager.cpp  StatisticsManager.h  Timer.cpp  Timer.h  UserStudyTimerInitialiser.cpp  UserStudyTimerInitialiser.h  (+4 more)
particle-track-and-trace/src/layers/collisions/: DummyCollisionHandler.cpp  ParticleCollision.cpp  ParticleCollision.h  ParticleCollisionCallback.h
particle-track-and-trace/src/nix/netcdfcxx4/: cmake-h5free.patch  package.nix
particle-track-and-trace/src/nix/vtk/: generic.nix
particle-track-and-trace/src/statistics/: BadgesAcquired.cpp  BadgesAcquired.h  Statistic.cpp  Statistic.h
particle-track-and-trace/src/vesselroutes/: QuadraticBezierRoute.cpp  QuadraticBezierRoute.h  StraightLineRoute.cpp  StraightLineRoute.h  VesselRoute.h  VesselRouteFactory.cpp  VesselRouteFactory.h
vtk/: .gitignore  README.md
vtk/src/: CMakeLists.txt  CartographicTransformation.cpp  CartographicTransformation.h  Program.cpp  Program.h  main.cpp  modules.json
vtk/src/advection/: AdvectionKernel.h  EulerAdvectionKernel.cpp  EulerAdvectionKernel.h  RK4AdvectionKernel.cpp  RK4AdvectionKernel.h  UVGrid.cpp
vtk/src/commands/: CameraMoveCallback.cpp  CameraMoveCallback.h  SpawnPointCallback.cpp  SpawnPointCallback.h  TimerCallbackCommand (conflicted copy 2024-05-03 143152).cpp  TimerCallbackCommand (conflicted copy 2024-05-03 151842).h  TimerCallbackCommand.cpp  TimerCallbackCommand.h
vtk/src/helperClasses/: BackgroundImage.h  CartographicTransformation.cpp  CartographicTransformation.h  EGlyphLayer.cpp  EGlyphLayer.h  LGlyphLayer.cpp  LGlyphLayer.h  Layer.cpp  Layer.h  NormalisedCartographicCamera.cpp  NormalisedCartographicCamera.h  Program.cpp  Program.h  SpawnPointCallback.cpp  SpawnPointCallback.h
vtk/src/layers/: BackgroundImage.cpp  BackgroundImage.h  EGlyphLayer.cpp  EGlyphLayer.h  LGlyphLayer.cpp  LGlyphLayer.h  Layer.cpp  Layer.h
